# orm-playground

./: .editorconfig  .gitignore  asgi.py  pyproject.toml  settings.py  wsgi.py
orm/students/: admin.py  apps.py  factories.py  models.py
orm/students/management/commands/: generate_data.py
orm/students/migrations/: 0001_initial.py
